@@ -1,0 +1,15 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<type>module</type>
+		<description>Language labels for the user profile's profile actions widget</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="label_MyFriendsWidget">my friends</label>
+		</languageKey>
+		<languageKey index="de" type="array">
+			<label index="label_MyFriendsWidget">Meine Freunde</label>
+		</languageKey>		
+	</data>
+</T3locallang>
