@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>Default template for the my groups widget for the user profile application</title>
+</head>
+<body>
+
+<!-- ###MY_FRIENDS### begin -->
+
+<!-- ###ROLES### begin -->
+<h3>###ROLE.name###</h3>
+<ul>
+	<!-- ###LOOP:FRIENDS### begin -->
+	<!-- ###LOOP_CONTENT### -->
+	<li>
+		###LINK:###USER.NICKNAME###|###TS:plugin.tx_community.pages.userProfile###|tx_community[user]=###USER.UID######
+	</li>
+	<!-- ###LOOP_CONTENT### -->
+	<!-- ###LOOP:FRIENDS### end -->
+</ul>
+
+<!-- ###ROLES### end -->
+
+<!-- ###MY_FRIENDS### end -->
+
+</body>
+</html>
