@@ -1,5 +1,6 @@
 2008-12-02 Frank Naegler  <typo3@naegler.net>
 
+	* adding new widget: MyFriends for the userProfile
 	* bugfix for empty request in tx_community_controller_SearchApplication->searchAction
 	* check of existing where clause in tx_community_model_UserGateway->findByWhereClause to prepend SQL errors
 
